@@ -1,6 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.beerslawlab.view;
 
+import java.awt.geom.Point2D;
+
 import edu.colorado.phet.beerslawlab.BLLSimSharing.Parameters;
 import edu.colorado.phet.beerslawlab.model.Faucet;
 import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
@@ -9,6 +11,7 @@ import edu.colorado.phet.common.phetcommon.simsharing.messages.UserAction;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponent;
 import edu.colorado.phet.common.piccolophet.nodes.faucet.FaucetNode;
 import edu.colorado.phet.common.piccolophet.simsharing.SimSharingDragSequenceEventHandler.DragFunction;
+import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PInputEvent;
 
 /**
@@ -16,18 +19,27 @@ import edu.umd.cs.piccolo.event.PInputEvent;
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public class BLLFaucetNode extends FaucetNode {
+public class BLLFaucetNode extends PNode {
+
+    private final FaucetNode faucetNode;
 
     public BLLFaucetNode( final UserComponent userComponent, final Faucet faucet ) {
-        super( faucet.getMaxFlowRate(), faucet.flowRate, faucet.enabled, faucet.getInputPipeLength(), true );
 
-        setOffset( faucet.getLocation() );
+        // use composition, so we can move the origin to the center of the output pipe
+        faucetNode = new FaucetNode( faucet.getMaxFlowRate(), faucet.flowRate, faucet.enabled, faucet.getInputPipeLength(), true );
+        addChild( faucetNode );
+        Point2D originOffset = globalToLocal( faucetNode.getGlobalOutputCenter() );
+        faucetNode.setOffset( faucet.getLocation().getX() - originOffset.getX(), faucet.getLocation().getY() - originOffset.getY() );
 
         // sim-sharing
-        getDragHandler().setStartEndDragFunction( new DragFunction() {
+        faucetNode.getDragHandler().setStartEndDragFunction( new DragFunction() {
             public void apply( UserAction action, Parameter xParameter, Parameter yParameter, PInputEvent event ) {
                 SimSharingManager.sendUserMessage( userComponent, action, Parameter.param( Parameters.flowRate, faucet.flowRate.get() ) );
             }
         } );
+    }
+
+    public double getFluidWidth() {
+        return globalToLocal( faucetNode.getGlobalOutputSize() ).getWidth();
     }
 }
